--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,110 +1,186 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nosotros</title>
+  <link rel="stylesheet" href="./assets/CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
-<body>
-    
-    <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success ">
-        <a class="navbar-brand" href="#"><img src="./imagenes/RG.png" alt=""width= 60px> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+
+<body class="color">
+
+  <header class="header">
+    <nav class="navbar navbar-expand-lg fondo">
+      <a class="navbar-brand" href="#"> <img src="assets/IMG/nomisLogoWhite.svg" alt="" width="100px"> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler">
+          <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-joystick" fill="white"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M7.106 15.553L.553 12.276A1 1 0 0 1 0 11.382V9.471a1 1 0 0 1 .606-.89L6 6.269v1.088L1 9.5l5.658 2.83a3 3 0 0 0 2.684 0L15 9.5l-5-2.143V6.27l5.394 2.312a1 1 0 0 1 .606.89v1.911a1 1 0 0 1-.553.894l-6.553 3.277a2 2 0 0 1-1.788 0z" />
+            <path fill-rule="evenodd" d="M7.5 9.5v-6h1v6h-1z" />
+            <path
+              d="M10 9.75c0 .414-.895.75-2 .75s-2-.336-2-.75S6.895 9 8 9s2 .336 2 .75zM10 2a2 2 0 1 1-4 0 2 2 0 0 1 4 0z" />
+          </svg>
+        </span>
+      </button>
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">quienes somos</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Servicios
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">ventas</a>
-                <a class="dropdown-item" href="#">archivos</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">que mas quiere?</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="busque" aria-label="Search">
-            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Buscar</button>
-          </form>
-        </div>
-      </nav>
-
-</header>
-
-<div class="container">
-    <div class="row p-5">
-    <div class="col">
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown otro">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Nosotros
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Quienes somos</a>
+              <a class="dropdown-item" href="#">Noticias</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown otro">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Streamming
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Opción 1</a>
+              <a class="dropdown-item" href="#">Opción 2</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Tienda virtual<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
+          <button class="btn my-2 my-sm-0 boton" type="submit">Buscar</button>
+        </form>
       </div>
-      <div class="col">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-          </div>
+    </nav>
+  </header>
+  <div class="container"> 
+    <div class="container">
+      <div class="row d-flex d-flex-column p-5">
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-center">
+          <p><img src="./assets/IMG/dde.gif" alt="at" width="100%" height="100%"></p>
+        </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="text-center d-flex justify-content-center"><img src="./assets/IMG/icoEsferaDragonBallBlack.svg" alt="db" width="50px"></div>
+          <p>Somos una comunidad de personas dedicada a la VENTA, INTERCAMBIO y NOTICIAS del mundo de los videojuegos,
+            anime, comics y tecnología. Nuestra idea nace de la necesidad de crear una comunidad activa en cada unos de
+            los mundos que encierra el término GEEK sumado con una excelente atención al cliente, compartir
+            conocimientos
+            y asesoría responsable.
+            Poco a poco nos hemos expandido a otras áreas como lo son los streams de videojuegos y eventos para la
+            comunidad.
+            En nuestra tienda, redes sociales y página web podrás encontrar productos, noticias, eventos y una comunidad
+            de videojugadores de todas las edades e intereses..</p>
+        </div>
+      </div>
     </div>
     <div class="container">
-        <div class="row p-5">
-        <div class="col">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-          </div>
-          <div class="col">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              </div>
+      <div class="row d-flex d-flex-column p-5">
+        <div class="col-lg-6 col-sm-12 d-flex justify-content-center">
+          <p><img src="./assets/IMG/bb.gif" alt="kn" width="100%" height="100%"></p>
         </div>
-        <footer>
-          <div class="card-deck p-5">
-            <div class="card">
-              <img src="./assets/IMG/sh.gif" class="align-self-center" alt="naruto" width="180px">
-              <div class="card-body">
-                <h5 class="card-title">Noticias del mundo Anime</h5>
-                <ul>
-                  <li><a href="#">Asociación de memoria historica del japon</a></li>
-                  <li><a href="#">SSDI guyana francesa</a></li>
-                  <li><a href="#">Fuma Ryu Montevideo</a></li>
-                  <li><a href="#">kyôkai kokusai malaga</a></li>
-                  <li><a href="#">Shinobi Dokurotai Dojo International</a></li>
-                  <li><a href="#">Minamikaze-ryūha Tsukahara-dōjō</a></li>
-                </ul>
-                <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./assets/IMG/js.gif" class="align-self-center" alt="js" width="100px">
-              <div class="card-body">
-                <h5 class="card-title">Avances Nuevos Videojuegos</h5>
-                <p class="card-text">para hipertrofia con el entrenador Jesus ramírez,  para pateo con el shidoshi ho Javier Ramírez.</p>
-                <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img src="./assets/IMG/gk.gif" class="align-self-center" alt="logo" width="190px">
-              <div class="card-body">
-                <h5 class="card-title">Actualidad Universo Geek</h5>
-                <p class="card-text">para contactar nuestras sede en colombia puede escribir a nuestras redes sociales,  para una sede internacional la comunicación debe ser a través de Federico Fava representante para occidente de la organización.</p>
-                <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
-              </div>
-            </div>
+        <div class="col-lg-6 col-sm-12">
+          <div class="text-center d-flex justify-content-center"><img src="./assets/IMG/icoNarutoBlack.svg" alt="db" width="50px"></div>
+          <p>MISIÓN: Brindar todo tipo de productos , prestar asesoría responsable a cada uno de nuestros clientes,
+            obrefer productos de primera calidad, preparar y participar en torneos para el videojugador Colombiano.</p>
+          <p>VISIÓN: Ser la tienda líder y referente para los aficionados a la cultira geek de Colombia, donde podrán
+            encontrar productos relacionados con los videojuegos, animes, comics, figuras,torneos y noticias.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="card-deck p-5">
+      <div class="card">
+        <img src="./assets/IMG/sh.gif" class="align-self-center" alt="naruto" width="180px">
+        <div class="card-body">
+          <h5 class="card-title">Noticias del mundo Anime</h5>
+          <p>Con un nuevo tráiler, Noblesse confirma su fecha de estreno</p>
+          <p class="card-text">Se trata del nuevo anime original de Crunchyroll, que llegará este mismo año a través
+            de
+            la plataforma. La cultura vampírica tendrá un nuevo referente este año de la mano de la industria del
+            anime
+            y de Crunchyroll, que adaptará el WEBTOON de Kwangsu Lee que lleva por título Noblesse. Hace instantes
+            recibimos un nuevo tráiler y con él la fecha de estreno de la serie: llegará a la plataforma el próximo 5
+            de
+            octubre.</p>
+          <p>Yastutama Yamamoto dirigirá esta historia que seguirá a un vampiro de la nobleza que, tras entrar en un
+            sueño de 820 años, despierta en la sociedad actual. Akiharu Ishii es el encargado del diseño de personajes
+            que, como se puede apreciar en el adelanto, realmente está muy bien.</p>
+          <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/IMG/js.gif" class="align-self-center" alt="js" width="100px">
+        <div class="card-body">
+          <h5 class="card-title">Avances Nuevos Videojuegos</h5>
+          <p>Xbox Series X: Precio, fecha de lanzamiento y especificaciones técnicas</p>
+          <p class="card-text">Microsoft nos ha dado nuevas buenas noticias. Según filtraciones, la Xbox Series X
+            saldría a la venta el 6 de noviembre, además de que se confirmó la existencia y costo de la Xbox Series S,
+            la versión más barata y pequeña de Xbox Series X. Asimismo, la consola principal tendrá un precio inicial
+            de
+            US$499 dólares y estaría disponible a partir del 10 de noviembre, según una filtración.</p>
+          <p>Tras filtrarse un video de la Xbox Series S, Xbox hizo oficial el anuncio y mediante una serie de tuits
+            publicados el 8 de septiembre la compañía confirmó que la nueva consola digital de Microsoft costará
+            US$299.
+            En otro tuit, Xbox mostró un video de la consola y mencionó algunas de sus características como tiempos de
+            carga más rápidos, mayor velocidad, desempeño de última generación, entre otros.</p>
+          <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="./assets/IMG/bat.gif" class="align-self-center" alt="logo" width="190px">
+        <div class="card-body">
+          <h5 class="card-title">Actualidad Universo Geek</h5>
+          <p>Star Wars: The High Republic nos muestra una versión joven de Yoda.</p>
+          <p class="card-text">La serie de cómics y libros Star Wars: The High Republic nos traerá una versión 200
+            años
+            más joven del legendario maestro Jedi: Yoda. Si bien muchos esperábamos que The High Republic fuese una
+            serie o películas, la nueva etapa argumental de Star Wars llegará en formato de libros y cómics y gracias
+            a
+            algunos artes conceptuales que se compartieron ya tenemos el primer vistazo a un rejuvenecido maestro
+            Yoda,
+            quién aparecerá 200 años más joven de lo que lo conocíamos.</p>
+          <p>Star Wars: The High Republic Adventures, de Daniel José Older, será una de las obras que contarán con el
+            icónico maestro Jedi y se estrenará en 2021. Por lo que se reveló, veremos a Yoda como un oficial de la
+            República y lo encontraremos viajando mientras busca nuevos y jóvenes aprendices para entrenarlos en el
+            uso
+            de la fuerza. </p>
+          <p class="card-text"><small class="text-muted">Last updated 1 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+    <footer class="page-footer panel-footer">
+      <div class="text-center py-3 container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-lg-8 col-md-12 col-sm-12 py-2">© 2020 Copyright:
+            <a href="#"> Nomisocialclub.com</a>
           </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+          <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+            <a href="#" class="col-1 "><img src="assets/IMG/instagram (1).png" alt="instagram" class="redes"></a>
+          </div>
+          <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+            <a href="#" class="col-1 "><img src="assets/IMG/facebook (1).png" alt="facebook" class="redes"></a>
+          </div>
+          <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+            <a href="#" class="col-1"><img src="assets/IMG/twitter.png" alt="twitter" class="redes"></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="assets/JS/jquery-3.5.1.slim.min.js"></script>
+    <script src="assets/JS/bootstrap.min.js"></script>
+    <script src="assets/JS/popper.min.js"></script>
 </body>
 
 </html>
