--- a/formulario.html
+++ b/formulario.html
@@ -1,126 +1,167 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de registro</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/CSS/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de registro</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="./assets/CSS/style.css">
 </head>
+
 <body>
+  <header class="header">
+    <nav class="navbar navbar-expand-lg fondo">
+      <a class="navbar-brand" href="#"> <img src="./assets/IMG/nomisLogoWhite.svg" alt="" width="100px"> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler">
+          <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-joystick" fill="white"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M7.106 15.553L.553 12.276A1 1 0 0 1 0 11.382V9.471a1 1 0 0 1 .606-.89L6 6.269v1.088L1 9.5l5.658 2.83a3 3 0 0 0 2.684 0L15 9.5l-5-2.143V6.27l5.394 2.312a1 1 0 0 1 .606.89v1.911a1 1 0 0 1-.553.894l-6.553 3.277a2 2 0 0 1-1.788 0z" />
+            <path fill-rule="evenodd" d="M7.5 9.5v-6h1v6h-1z" />
+            <path
+              d="M10 9.75c0 .414-.895.75-2 .75s-2-.336-2-.75S6.895 9 8 9s2 .336 2 .75zM10 2a2 2 0 1 1-4 0 2 2 0 0 1 4 0z" />
+          </svg>
+        </span>
+      </button>
 
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-success ">
-        <a class="navbar-brand" href="#"><img src="./imagenes/RG.png" alt=""width= 60px> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">quienes somos</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Servicios
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">ventas</a>
-                <a class="dropdown-item" href="#">archivos</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">que mas quiere?</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="busque" aria-label="Search">
-            <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Buscar</button>
-          </form>
-        </div>
-      </nav>
-
-</header>
-
-<h1>Formulario de registro</h1>
-<div class="col-12 col-md-6 order-2 order-md-1  d-flex flex-column align-items-center justify-content-start p-5">
-  <form>
-    <div class="row col-12 justify-content-end">
-      <div class="col">
-    <img src="./assets/IMG/MK.jpg" alt="" width="150px">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown otro">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Nosotros
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Quienes somos</a>
+              <a class="dropdown-item" href="#">Noticias</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown otro">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Streamming
+            </a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Opción 1</a>
+              <a class="dropdown-item" href="#">Opción 2</a>
+            </div>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Tienda virtual<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <form class="form-inline">
+          <input class="form-control mr-sm-2" type="search" placeholder="Buscar..." aria-label="Search">
+          <button class="btn my-2 my-sm-0 boton" type="submit">Buscar</button>
+        </form>
       </div>
-    </div>
+    </nav>
+
+  </header>
+  <div class="container">
     <div class="row">
-      <div class="form-group col">
-        <label for="">Nombre</label>
-        <input type="text" class="form-control" placeholder="Ingrese su Nombre">
+      <div class="col-md-6 col-lg-6 col-sm-12 d-flex my-2">
+        <form>
+          <h1>Formulario de registro</h1>
+          <div class="row">
+            <div class="form-group col">
+              <label for="">Nombre</label>
+              <input type="text" class="form-control" placeholder="Ingrese su Nombre">
+            </div>
+          </div>
+          <div class="row">
+            <div class="form-group col">
+              <label for="">Apellidos</label>
+              <input type="text" class="form-control" placeholder="Ingrese sus Apellidos">
+            </div>
+          </div>
+          <div class="form-group col">
+            <div class="row">
+              <label for="">Correo electrónico</label>
+              <input type="email" class="form-control" placeholder="Ingrese su E-mail">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-5">
+              <label for="inputCity">Ciudad</label>
+              <input type="text" class="form-control" id="inputCity">
+            </div>
+            <div class="form-group col-md-3">
+              <label for="inputState">País</label>
+              <select id="inputState" class="form-control">
+                <option selected>Elija...</option>
+                <option>Colombia</option>
+                <option>Chile</option>
+                <option>Canada</option>
+                <option>Chipre</option>
+                <option>Otro</option>
+              </select>
+            </div>
+            <div class="form-group col-md-4">
+              <label for="inputZip">Teléfono</label>
+              <input type="tel" class="form-control" id="inputZip">
+            </div>
+            <div class="form-group col">
+              <label for="exampleFormControlTextarea1">Dejenos su mensaje</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="form-check">
+              <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3"
+                aria-describedby="invalidCheck3Feedback" required>
+              <label class="form-check-label" for="invalidCheck3">
+                Acepta condiciones y restricciones?
+              </label>
+              <div id="invalidCheck3Feedback" class="invalid-feedback">
+                Debe aceptar las condiciones para continuar.
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-outline-dark">Enviar</button>
+        </form>
       </div>
-    </div>
-      <div class="row">
-      <div class="form-group col">
-        <label for="">Apellidos</label>
-        <input type="text" class="form-control" placeholder="Ingrese sus Apellidos">
-      </div>
-    </div>
-      <div class="form-group col">
-        <div class="row">
-        <label for="">Correo electrónico</label>
-        <input type="email" class="form-control" placeholder="Ingrese su E-mail">
-      </div>
-    </div>
-      <div class="row">
-      <div class="form-group col">
-        <label for="">Password</label>
-        <input type="password" class="form-control" placeholder="Asigne un password por favor">
-      </div>
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-5">
-        <label for="inputCity">Ciudad</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="form-group col-md-3">
-        <label for="inputState">País</label>
-        <select id="inputState" class="form-control">
-          <option selected>Elija...</option>
-          <option>Colombia</option>
-          <option>Chile</option>
-          <option>Canada</option>
-          <option>Chipre</option>
-          <option>Colobos</option>
-        </select>
-      </div>
-      <div class="form-group col-md-4">
-        <label for="inputZip">Teléfono</label>
-        <input type="tel" class="form-control" id="inputZip">
-      </div>
-    </div>
-    <div class="form-group">
-      <div class="form-check">
-        <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" aria-describedby="invalidCheck3Feedback" required>
-      <label class="form-check-label" for="invalidCheck3">
-          Acepta condiciones y restricciones?
-        </label>
-        <div  id="invalidCheck3Feedback" class="invalid-feedback">
-          Debe aceptar las condiciones para continuar.
+      <div class="col-md-6 col-lg-6 col-sm-12 d-flex my-2">
+        <div>
+        <img src="./assets/IMG/av.gif" alt="imagen" width="100%" height="90%" >
         </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-outline-dark">Enviar</button>
-  </form>
-  
-
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+  </div>
+  <footer class="page-footer panel-footer">
+    <div class="text-center py-3 container">
+      <div class="row d-flex justify-content-center">
+        <div class="col-lg-8 col-md-12 col-sm-12 py-2">© 2020 Copyright:
+          <a href="#"> Naomisocialclub.com</a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+          <a href="#" class="col-1 "><img src="assets/IMG/instagram (1).png" alt="instagram" class="redes"></a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+          <a href="#" class="col-1 "><img src="assets/IMG/facebook (1).png" alt="facebook" class="redes"></a>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 py-2">
+          <a href="#" class="col-1"><img src="assets/IMG/twitter.png" alt="twitter" class="redes"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
